Fix for Table of Contents Id links cutting off linked header

--- a/theme/input/styles/l5r.css
+++ b/theme/input/styles/l5r.css
@@ -59,3 +59,7 @@
         overflow-y: auto;
     }
 }
+
+html {
+    scroll-padding-top: 5rem;
+  }
